feat: 新增 默认禁用不包含任何 Hook 和 自定义查询的订阅
fix #467
